--- a/src/Componentes/styles.css
+++ b/src/Componentes/styles.css
@@ -65,6 +65,9 @@ body {
     margin-top: 15px;
     font-weight: 500;
   }
+  .aviso{
+    font-size: 12px;
+  }
   
   /* Estilos Responsivos */
   @media (max-width: 768px) {
